erro.txt
PS C:\Users\ausco\audio-capture\build> cmake --build .
[ 14%] Building CXX object CMakeFiles/audio-capture.dir/src/AudioCapture.cpp.obj
C:\Users\ausco\audio-capture\src\AudioCapture.cpp: In destructor 'virtual AudioCapture::~AudioCapture()':
C:\Users\ausco\audio-capture\src\AudioCapture.cpp:21:9: warning: pure virtual 'virtual void AudioCapture::stop()' called from destructor
   21 |     stop();
      |     ~~~~^~
C:\Users\ausco\audio-capture\src\AudioCapture.cpp: In member function 'bool AudioCapture:initializeWaveIn()':
C:\Users\ausco\audio-capture\src\AudioCapture.cpp:60:30: error: 'outputFile' was not declared in this scope; did you mean 'm_outputFile'?
   60 |     m_writer = new WavWriter(outputFile, 44100, 2, 16);
      |                              ^~~~~~~~~~
      |                              m_outputFile
C:\Users\ausco\audio-capture\src\AudioCapture.cpp: At global scope:
C:\Users\ausco\audio-capture\src\AudioCapture.cpp:80:6: error: no declaration matches 'void AudioCapture::startInternal()'
   80 | void AudioCapture::startInternal()
      |      ^~~~~~~~~~~~
C:\Users\ausco\audio-capture\src\AudioCapture.cpp:80:6: note: no functions named 'void AudioCapture::startInternal()'
In file included from C:\Users\ausco\audio-capture\src\AudioCapture.cpp:1:
C:/Users/ausco/audio-capture/include/AudioCapture.h:23:7: note: 'class AudioCapture' defined here
   23 | class AudioCapture {
      |       ^~~~~~~~~~~~
mingw32-make[2]: *** [CMakeFiles\audio-capture.dir\build.make:94: CMakeFiles/audio-capture.dir/src/AudioCapture.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:86: CMakeFiles/audio-capture.dir/all] Error 2
mingw32-make: *** [Makefile:90: all] Error 2
PS C:\Users\ausco\audio-capture\build> 